--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": "^7.4",
-        "kiryi/pathy": "^1.0",
+        "kiryi/pathyi": "^1.0",
         "kiryi/inyi": "^1.0"
     },
     "autoload": {
